--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
